--- a/public/index.html
+++ b/public/index.html
@@ -28,10 +28,10 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js" integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js" integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k" crossorigin="anonymous"></script>
     <!-- Photo Module -->
-    <script src="https://s3.us-east-2.amazonaws.com/elasticbeanstalk-us-east-2-281924008100/bundle.js"></script>
+    <script src="http://bearbnb-photo-module.us-east-2.elasticbeanstalk.com/rooms/1/bundle.js"></script>
     <!-- Checkout Module -->
-    <script src="http://localhost:3002/rooms/1/bundle.js"></script>
+    <script src="hhttp://checkout-dev.us-east-2.elasticbeanstalk.com/rooms/1/bundle.js"></script>
     <!-- Review Module -->
-    <script src="http://localhost:3003/rooms/1/bundle.js"></script>
+    <!-- <script src="http://localhost:3003/rooms/1/bundle.js"></script> -->
   </body>
 </html>
