--- a/public/index.html
+++ b/public/index.html
@@ -30,7 +30,7 @@
     <!-- Photo Module -->
     <script src="http://bearbnb-photo-module.us-east-2.elasticbeanstalk.com/rooms/1/bundle.js"></script>
     <!-- Checkout Module -->
-    <script src="hhttp://checkout-dev.us-east-2.elasticbeanstalk.com/rooms/1/bundle.js"></script>
+    <script src="http://checkout-dev.us-east-2.elasticbeanstalk.com/rooms/1/bundle.js"></script>
     <!-- Review Module -->
     <!-- <script src="http://localhost:3003/rooms/1/bundle.js"></script> -->
   </body>
