Add review module

--- a/public/index.html
+++ b/public/index.html
@@ -32,6 +32,6 @@
     <!-- Checkout Module -->
     <script src="http://checkout-dev.us-east-2.elasticbeanstalk.com/rooms/1/bundle.js"></script>
     <!-- Review Module -->
-    <!-- <script src="http://localhost:3003/rooms/1/bundle.js"></script> -->
+    <script src="http://customer-reviews.us-east-1.elasticbeanstalk.com/rooms/1/bundle.js"></script>
   </body>
 </html>
