Move reviews in checkout div

--- a/public/index.html
+++ b/public/index.html
@@ -12,10 +12,12 @@
   <body>
     <div id="search-module"></div>
     <div id="photo-module"></div>
-    <div id="container" class="review-body">
-      <div id="desc"></div>
+    <div id="container" class="checkout-body">
+      <div>
+        <div id="desc"></div>
+        <div id="reviews" class="checkout-body container"></div>
+      </div>
       <div id="app"></div>
-      <div id="reviews" class="checkout-body container"></div>
     </div>
     <div id=footer>
       <div class="footer-content">
